--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ file.reference.servlet-api.jar=lib/servlet-api.jar
 file.reference.wsdl4j.jar=lib/wsdl4j.jar
 file.reference.xalan.jar=lib/xalan.jar
 file.reference.common.jar=lib/escidoc/common.jar
+file.reference.httpclient.jar=lib/escidoc/httpclient-4.0.1.jar:lib/escidoc/httpcore-4.1-beta1.jar:lib/escidoc/jsr173_1.0_api.jar
 file.reference.common.security.jar=lib/escidoc/spring-security-core-2.0.2.jar:lib/escidoc/spring-security-core-tiger-2.0.2.jar:lib/escidoc/wss4j-1.5.3.jar
 includes=**
 j2ee.deploy.on.save=false
@@ -49,6 +50,7 @@ javac.classpath=\
     ${file.reference.wsdl4j.jar}:\
     ${file.reference.xalan.jar}:\
     ${file.reference.common.jar}:\
+    ${file.reference.httpclient.jar}:\
     ${file.reference.common.security.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
