--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,20 +18,20 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.axis.jar=lib/axis.jar
-file.reference.commons-discovery.jar=lib/commons-discovery.jar
-file.reference.commons-logging.jar=lib/commons-logging.jar
+file.reference.axis.jar=lib/axis-1.4.jar
+file.reference.commons-discovery.jar=lib/commons-discovery-0.4.jar
+file.reference.commons-logging.jar=lib/commons-logging-1.1.jar
 file.reference.cql-java.jar=lib/cql-java.jar
 file.reference.jaxrpc.jar=lib/jaxrpc.jar
 file.reference.log4j.jar=lib/log4j.jar
 file.reference.ostermillerutils.jar=lib/ostermillerutils.jar
 file.reference.saaj.jar=lib/saaj.jar
 file.reference.servlet-api.jar=lib/servlet-api.jar
-file.reference.wsdl4j.jar=lib/wsdl4j.jar
-file.reference.xalan.jar=lib/xalan.jar
+file.reference.wsdl4j.jar=lib/wsdl4j-1.6.2.jar
+file.reference.xalan.jar=lib/xalan-2.7.1.jar
 file.reference.common.jar=lib/escidoc/common.jar
 file.reference.httpclient.jar=lib/escidoc/httpclient-4.0.1.jar:lib/escidoc/httpcore-4.1-beta1.jar:lib/escidoc/jsr173_1.0_api.jar
-file.reference.common.security.jar=lib/escidoc/spring-security-core-2.0.2.jar:lib/escidoc/spring-security-core-tiger-2.0.2.jar:lib/escidoc/wss4j-1.5.3.jar
+file.reference.common.security.jar=lib/escidoc/spring-security-core-2.0.2.jar:lib/escidoc/spring-security-core-tiger-2.0.2.jar
 includes=**
 j2ee.deploy.on.save=false
 j2ee.platform=1.4
