--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,6 @@
 	<classpathentry kind="lib" path="lib/ostermillerutils.jar"/>
 	<classpathentry kind="lib" path="lib/saaj.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/escidoc/spring-security-core-2.0.2.jar"/>
-	<classpathentry kind="lib" path="lib/escidoc/spring-security-core-tiger-2.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/httpclient-4.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/httpcore-4.1-beta1.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/jsr173_1.0_api.jar"/>
@@ -20,5 +18,6 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/escidoc/spring-security-core-3.0.5.RELEASE.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
