--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+bin.dir=bin
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -88,6 +89,8 @@ runmain.jvmargs=
 source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
+sources.dir=sources
+sources.zip.name=SRW-sources.zip
 war.content.additional=
 war.ear.name=SRW.war
 war.name=SRW.war
