--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,8 @@
 	<classpathentry kind="lib" path="lib/ostermillerutils.jar"/>
 	<classpathentry kind="lib" path="lib/saaj.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/escidoc/httpclient-4.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/escidoc/httpcore-4.1-beta1.jar"/>
+	<classpathentry kind="lib" path="lib/escidoc/httpclient-4.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/escidoc/httpcore-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/jsr173_1.0_api.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/common.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
