--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ file.reference.wsdl4j.jar=lib/wsdl4j-1.6.2.jar
 file.reference.xalan.jar=lib/xalan-2.7.1.jar
 file.reference.common.jar=lib/escidoc/common.jar
 file.reference.httpclient.jar=lib/escidoc/httpclient-4.0.1.jar:lib/escidoc/httpcore-4.1-beta1.jar:lib/escidoc/jsr173_1.0_api.jar
-file.reference.common.security.jar=lib/escidoc/spring-security-core-2.0.2.jar:lib/escidoc/spring-security-core-tiger-2.0.2.jar
+file.reference.common.security.jar=lib/escidoc/spring-security-core-3.0.5.RELEASE.jar
 includes=**
 j2ee.deploy.on.save=false
 j2ee.platform=1.4
