use Streams for record-data
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/SRW/1.3/SRW-Repository/@45016 5c398c58-3d0a-0410-a38c-d0825f6816e0

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,6 +22,7 @@ excludes=
 file.reference.axis.jar=lib/axis-1.4.jar
 file.reference.commons-discovery.jar=lib/commons-discovery-0.4.jar
 file.reference.commons-logging.jar=lib/commons-logging-1.1.jar
+file.reference.commons-lang.jar=lib/escidoc/commons-lang-2.5.jar
 file.reference.cql-java.jar=lib/cql-java.jar
 file.reference.jaxrpc.jar=lib/jaxrpc.jar
 file.reference.log4j.jar=lib/log4j.jar
@@ -42,6 +43,7 @@ javac.classpath=\
     ${file.reference.axis.jar}:\
     ${file.reference.commons-discovery.jar}:\
     ${file.reference.commons-logging.jar}:\
+    ${file.reference.commons-lang.jar}:\
     ${file.reference.cql-java.jar}:\
     ${file.reference.jaxrpc.jar}:\
     ${file.reference.log4j.jar}:\
