use Streams for record-data
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/SRW/1.4/SRW-Repository/@45017 5c398c58-3d0a-0410-a38c-d0825f6816e0

--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 	<classpathentry kind="lib" path="lib/wsdl4j-1.6.2.jar"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/spring-security-core-3.0.5.RELEASE.jar"/>
+	<classpathentry kind="lib" path="lib/escidoc/commons-lang-2.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
