add prefixes to xml-elements of sru-schema

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,11 @@ file.reference.xalan.jar=lib/xalan-2.7.1.jar
 file.reference.common.jar=lib/escidoc/common.jar
 file.reference.httpclient.jar=lib/escidoc/httpclient-4.0.1.jar:lib/escidoc/httpcore-4.1-beta1.jar:lib/escidoc/jsr173_1.0_api.jar
 file.reference.common.security.jar=lib/escidoc/spring-security-core-3.0.5.RELEASE.jar
+file.reference.jaxbapi.jar=lib/jaxb-api-2.2.3.jar
+file.reference.jaxbimpl.jar=lib/jaxb-impl-2.2.3.jar
 includes=**
 j2ee.deploy.on.save=false
-j2ee.platform=1.4
+j2ee.platform=1.6
 j2ee.server.type=Tomcat60
 jar.compress=false
 javac.classpath=\
@@ -54,13 +56,15 @@ javac.classpath=\
     ${file.reference.xalan.jar}:\
     ${file.reference.common.jar}:\
     ${file.reference.httpclient.jar}:\
+    ${file.reference.jaxbapi.jar}:\
+    ${file.reference.jaxbimpl.jar}:\
     ${file.reference.common.security.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=true
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
