--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,7 @@
 	<classpathentry kind="lib" path="lib/xalan-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/spring-security-core-3.0.5.RELEASE.jar"/>
 	<classpathentry kind="lib" path="lib/escidoc/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-api-2.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/jaxb-impl-2.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
